Use static header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-  {% include head.html %}
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bioinformatics code review group</title>
+    <meta name="description" content="Bioinformatics code review group">
+    <link rel="stylesheet" href="biocode-review/css/main.css">
+    <link rel="canonical" href="http://kylebittinger.github.io/biocode-review/">
+    <link rel="alternate" type="application/rss+xml" title="Bioinformatics code review group" href="http://kylebittinger.github.io/biocode-review/feed.xml">
+  </head>
   <body>
 
     <header class="site-header" role="banner">
