--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bioinformatics code review group</title>
     <meta name="description" content="Bioinformatics code review group">
-    <link rel="stylesheet" href="biocode-review/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="canonical" href="http://kylebittinger.github.io/biocode-review/">
     <link rel="alternate" type="application/rss+xml" title="Bioinformatics code review group" href="http://kylebittinger.github.io/biocode-review/feed.xml">
   </head>
