--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,19 @@ code { padding: 1px 5px; }
 pre { padding: 8px 12px; overflow-x: auto; }
 pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
+/** Wrapper */
+.wrapper { max-width: 800px; margin-right: auto; margin-left: auto; padding-right: 30px; padding-left: 30px; }
+
+/** Clearfix */
+.wrapper:after, .footer-col-wrapper:after { content: ""; display: table; clear: both; }
+
+/** Icons */
+.icon > svg { display: inline-block; vertical-align: middle; }
+.icon > svg path { fill: #828282; }
+
+/** Site header */
+.site-header { border-top: 5px solid #424242; border-bottom: 1px solid #e8e8e8; min-height: 56px; position: relative; }
+
 table { border-collapse: collapse; }
 
 table, th, td { border: 1px solid black; }
